# swiftgpupacksim

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .local.vimrc  .ycm_extra_conf.py  README.md  format.sh  format_python.sh
data/: README.md  generate_mock_logs.sh  patch_logging.diff
py/: .gitignore  README.md  generate_hydro_part.py  headers.py  hydro_part_data_struct.py  hydro_part_header.py  make_all.sh  make_all_particles.sh  parse_yaml.py  parts_header.py  templates.py  utils.py
sim/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  make_all_loop_splitting_variants.sh  make_all_memory_layouts.sh  make_all_struct_alignments.sh  make_first_init_variants.sh  make_flushing_variants.sh  make_loop_splitting_variants.sh  swiftgpupacksim.c
sim/examples/: .gitignore  README  job_cellsize_dine2.slm  job_cellsize_gn003.slm  job_cellsize_local.sh  job_firstinit_dine2.slm  job_firstinit_gn003.slm  job_firstinit_local.sh  job_firstinit_mad06.sh  job_flush_BIGFLUSH_dine2.slm  job_flush_BIGFLUSH_gn003.slm  job_flush_dine2.slm  job_flush_gn003.slm  job_flush_local.sh  job_flush_mad06.sh  job_full_dine2.slm  job_full_gn003.slm  job_full_mad06.sh  job_globalvar_threadlocal_dine2.slm  job_globalvar_threadlocal_gn003.slm  job_nthreads_dine2.slm  job_nthreads_gn003.slm  job_nthreads_mad06.sh  job_vector_dine2.slm  job_vector_gn003.slm  job_vector_mad06.sh  plot_across_nodes.sh  plot_dine2.sh  plot_gn003.sh  plot_local.sh  plot_mad06.sh  run_BIGFLUSH.slm  run_Gresho128_6threads.sh  run_Gresho256_32threads.sh  run_Gresho64_4threads.sh  run_Gresho64_singlethread.sh  run_loop_variants_gn002.sh  run_loop_variants_gn002.slm  run_loop_variants_gn003.slm  run_loop_variants_gn004.sh  (+6 more)
sim/examples/archive/: job_flush_BIGFLUSH_dine2.slm  job_flush_BIGFLUSH_mad06.sh  plot_gn002.sh  run_loop_variants_gn004.sh  run_struct_alignment_gn001.sh  run_struct_alignment_gn002.sh
sim/src/: Makefile.am  TODO  align.h  cell.h  cell_hydro.h  flush_caches.h  flush_caches_x86.h  gpu_part_pack_functions.h  help.c  help.h  hydro_part.h  hydro_part_arrays_flush.h  hydro_part_generated.h  hydro_part_init.h  io.c  io.h  packing_data_struct.h  parameters.c  parameters.h  parts.h  run_simulation.c  run_simulation.h
sim/src/gpu_part_pack_functions/: gpu_part_pack_functions_explicit_var_access.h  gpu_part_pack_functions_explicit_var_access_loop_split_by_element.h  gpu_part_pack_functions_explicit_var_access_loop_split_by_struct.h  gpu_part_pack_functions_explicit_var_access_loop_split_by_struct_and_type.h  gpu_part_pack_functions_explicit_var_access_loop_split_by_type.h  gpu_part_pack_functions_explicit_var_access_loop_split_none.h  gpu_part_pack_functions_global_var_access.h  gpu_part_pack_functions_global_var_access_loop_split_by_element.h  gpu_part_pack_functions_global_var_access_loop_split_by_struct.h  gpu_part_pack_functions_global_var_access_loop_split_by_struct_and_type.h  gpu_part_pack_functions_global_var_access_loop_split_by_type.h  gpu_part_pack_functions_global_var_access_loop_split_none.h  gpu_part_pack_functions_modified.h  gpu_part_pack_functions_part_struct_access.h  gpu_part_pack_functions_part_struct_access_loop_split_by_element.h  gpu_part_pack_functions_part_struct_access_loop_split_by_struct.h  gpu_part_pack_functions_part_struct_access_loop_split_by_struct_and_type.h  gpu_part_pack_functions_part_struct_access_loop_split_by_type.h  gpu_part_pack_functions_part_struct_access_loop_split_none.h
sim/src/realisations/aos/: gpu_part_pack_functions.h  hydro_part.h  hydro_part_arrays_flush.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/pack_force/: hydro_part.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/pack_force_type/: hydro_part.h  hydro_part_arrays_flush.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/pack_gradient/: gpu_part_pack_functions.h  hydro_part.h  hydro_part_arrays_flush.h
sim/src/realisations/pack_gradient_type/: hydro_part.h
sim/src/realisations/pack_shared/: hydro_part.h  hydro_part_arrays_flush.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/pack_shared_type/: hydro_part.h  hydro_part_arrays_flush.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/pack_type/: hydro_part.h
sim/src/realisations/random_order/: hydro_part.h  parts.h
sim/src/realisations/soa/: gpu_part_pack_functions.h  gpu_part_pack_functions_modified.h  hydro_part.h  hydro_part_arrays_flush.h  hydro_part_arrays_struct.h  parts.h
sim/src/realisations/upstream/: hydro_part.h  hydro_part_arrays_flush.h
sim/src/swift_placeholders/: active.h  align.h  atomic.h  barrier.h  cache.h  cell_other_physics.h  clocks.c  clocks.h  cycle.h  engine.c  engine.h  error.h  gpu_pack_metadata.c  gpu_pack_metadata.h  gpu_pack_params.c  gpu_pack_params.h  gravity_cache.h  hydro_part_placeholder_structs.h  inline.h  memuse.h  queue.h  runner.h  scheduler.h  swift_intrinsics.h  task.c  task.h  threadpool.h  timeline.h  timers.c  timers.h  timestep_limiter_struct.h  version_string.h.in
sim/src/swift_placeholders/cuda/: gpu_offload_data.c  gpu_offload_data.h  gpu_part_pack_functions.h  gpu_part_structs.h
sim/tests/: Makefile.am  pytests.sh  test_cmdlineargs.c  test_read_paramfile.c
sim/tests/input/: test_data_types.yml  test_ifdefs.yml  test_split_struct_arrays.yml
sim/tests/output/: test_arrays.h  test_data_types.h  test_ifdefs.h  test_split_struct.h  test_split_struct_arrays.h  test_split_struct_nopart.h  test_split_struct_nopart.yml  test_split_struct_structs_and_unions.h  test_struct.h  test_union.h
src/: cache.h  cell.h  cell_hydro.h  config.h  error.h  help.c  help.h  hydro_part.h  io.c  io.h  packing_data_struct.h  parameters.c  parameters.h  parts.h  placeholder_structs.h  queue.h  run_simulation.c  run_simulation.h  runner_doiact_functions_hydro_gpu.h  runner_gpu_pack_functions.c  runner_gpu_pack_functions.h  swiftgpupack.c  swiftgpupacksim.c  task.c  task.h  timers.c  timers.h
test/: .gitignore  Makefile  pytests.sh  run_all_tests.sh  test_cmdlineargs.c  test_header_output.c  test_read_data_file.c  test_read_paramfile.c
(+129 files in other folders)
